# ros2_ws

./: README.md  ROS2_YOLOV8_D435i_Integration_Guide.md  test_detector.py  启的.md
install/: local_setup.sh  setup.sh
install/vision_detector/lib/vision_detector/: detector_node
install/vision_detector/share/vision_detector/: package.dsv  package.ps1  package.sh  package.xml
install/vision_detector/share/vision_detector/launch/: detector.launch.py  detector_rviz.launch.py
install/vision_msgs_custom/include/vision_msgs_custom/vision_msgs_custom/msg/: detection2_d_extended.h  detection2_d_extended.hpp  object_distance.h  object_distance.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/vision_msgs_custom/include/vision_msgs_custom/vision_msgs_custom/msg/detail/: detection2_d_extended__builder.hpp  detection2_d_extended__functions.h  detection2_d_extended__rosidl_typesupport_fastrtps_c.h  detection2_d_extended__rosidl_typesupport_fastrtps_cpp.hpp  detection2_d_extended__rosidl_typesupport_introspection_c.h  (+17 more)
install/vision_msgs_custom/share/ament_index/resource_index/package_run_dependencies/: vision_msgs_custom
install/vision_msgs_custom/share/ament_index/resource_index/parent_prefix_path/: vision_msgs_custom
install/vision_msgs_custom/share/ament_index/resource_index/rosidl_interfaces/: vision_msgs_custom
install/vision_msgs_custom/share/vision_msgs_custom/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vision_msgs_custom/share/vision_msgs_custom/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_vision_msgs_custom__rosidl_generator_pyExport-noconfig.cmake  export_vision_msgs_custom__rosidl_generator_pyExport.cmake  export_vision_msgs_custom__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_vision_msgs_custom__rosidl_typesupport_fastrtps_cExport.cmake  export_vision_msgs_custom__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_vision_msgs_custom__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  vision_msgs_customConfig-version.cmake  vision_msgs_customConfig.cmake  vision_msgs_custom__rosidl_typesupport_cppExport.cmake  vision_msgs_custom__rosidl_typesupport_introspection_cExport.cmake
install/vision_msgs_custom/share/vision_msgs_custom/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/vision_msgs_custom/share/vision_msgs_custom/msg/: Detection2DExtended.idl  Detection2DExtended.msg  ObjectDistance.idl  ObjectDistance.msg
log/: latest_build
ros2_vision_project/: README.md
ros2_vision_project/ros2_ws/: test_decision_processor.py  启的.md
ros2_vision_project/ros2_ws/src/: yolov8n.pt
ros2_vision_project/ros2_ws/src/decision_processor/: package.xml  setup.py
ros2_vision_project/ros2_ws/src/decision_processor/decision_processor/: config.py  kalman_filter.py  motion_planner.py  processor_node.py  robot_decision.py
ros2_vision_project/ros2_ws/src/src/auto_serial_bridge-main/: CMakeLists.txt  README.md  package.xml
ros2_vision_project/ros2_ws/src/src/auto_serial_bridge-main/config/: protocol-sample.yaml  protocol.yaml
ros2_vision_project/ros2_ws/src/src/auto_serial_bridge-main/include/auto_serial_bridge/: generated_bindings.hpp  loopback_utils.hpp  packet_handler.hpp  protocol.hpp  serial_controller.hpp
ros2_vision_project/ros2_ws/src/src/auto_serial_bridge-main/launch/: serial_bridge_by_component.launch.py  serial_bridge_by_node.launch.py
ros2_vision_project/ros2_ws/src/src/auto_serial_bridge-main/mcu_output/: PROTOCOL_DOC.md  protocol.c  protocol.h
ros2_vision_project/ros2_ws/src/src/auto_serial_bridge-main/mcu_output/include/auto_serial_bridge/: generated_bindings.hpp  generated_config.hpp
ros2_vision_project/ros2_ws/src/src/auto_serial_bridge-main/mcu_output/mcu_output/: PROTOCOL_DOC.md  protocol.c  protocol.h
ros2_vision_project/ros2_ws/src/src/auto_serial_bridge-main/scripts/: auto_udev.sh  checksum_build_matrix.py  codegen.py
ros2_vision_project/ros2_ws/src/src/auto_serial_bridge-main/src/: serial_controller.cpp  serial_node.cpp
ros2_vision_project/ros2_ws/src/src/auto_serial_bridge-main/test/: pty_test_utils.py  test_batch.cpp  test_checksum_algorithms.cpp  test_checksum_build_matrix.py  test_codegen_checksum.py  test_edge_condition.cpp  test_loopback_utils.cpp  test_main.py  test_main_heartbeat_disabled.py  test_packet_handler.cpp  test_packet_handler_reset.cpp  test_protocol_structure.cpp  test_public_ci_contract.py  test_scocat.py  test_test_main_opt_in_gate.py
ros2_vision_project/ros2_ws/src/src/decision_processor/: setup.cfg
ros2_vision_project/ros2_ws/src/src/decision_processor/decision_processor/: motion_planner.py  target_confirmation.py
ros2_vision_project/ros2_ws/src/src/vision_detector/vision_detector/: detector_node.py  model_switcher.py
ros2_vision_project/ros2_ws/src/vision_detector/: setup.py
ros2_vision_project/ros2_ws/src/vision_detector/launch/: full_system.launch.py
ros2_vision_project/ros2_ws/src/vision_detector/vision_detector/: model_switcher.py  yolov8_detector.py
ros2_vision_project/ros2_ws/src/vision_detector/weights/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/vision_detector/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/vision_detector/install/vision_detector/lib/vision_detector/: detector_node
src/vision_detector/install/vision_detector/share/vision_detector/: package.dsv  package.ps1  package.sh  package.xml
src/vision_detector/log/: latest_build
(+13 files in other folders)
