<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_serial_bridge</name>
  <version>0.0.1</version>
  <description>Auto Serial Bridge package for ROS2</description>
  <maintainer email="edmounds@163.com">edmounds</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>serial_driver</depend>
  <depend>rclcpp_components</depend>
  <exec_depend>python3-yaml</exec_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>python3-serial</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
